[gd_scene load_steps=10 format=3 uid="uid://c6riicfjiplm6"]

[ext_resource type="Script" path="res://game_logic/global_pause_menu/global_pause.gd" id="1_epr2x"]
[ext_resource type="Theme" uid="uid://rglalewkhbya" path="res://theme/main_menu.tres" id="1_rqgyv"]
[ext_resource type="Script" path="res://game_logic/global_pause_menu/Input_detect_helper.gd" id="2_ypp6t"]
[ext_resource type="Texture2D" uid="uid://70rbxju80c73" path="res://assets/gui/ButtonsText/ButtonText_Large_Blue_Round.png" id="4_fwwrc"]
[ext_resource type="Texture2D" uid="uid://d1cjysc3fsli" path="res://assets/gui/ButtonsText/ButtonText_Small_Round.png" id="5_gkrn5"]
[ext_resource type="Texture2D" uid="uid://p7ikagr6dvhg" path="res://assets/gui/ButtonsText/ButtonText_Large_Green_Round.png" id="5_hmfyk"]
[ext_resource type="Texture2D" uid="uid://bnbwffjtir7ls" path="res://assets/gui/ButtonsText/ButtonText_Small_Green_Round.png" id="6_0xe54"]
[ext_resource type="Script" path="res://game_logic/global_pause_menu/Options.gd" id="6_q57an"]
[ext_resource type="Texture2D" uid="uid://bcg6mg5amw53u" path="res://assets/gui/ButtonsText/ButtonText_Small_Orange_Round.png" id="7_pj630"]

[node name="Pause" type="CanvasLayer"]
process_mode = 2
process_priority = -1
visible = false
script = ExtResource("1_epr2x")
self_detection = false
metadata/_edit_lock_ = true

[node name="BGM" type="AudioStreamPlayer" parent="."]

[node name="Input_detect_helper" type="Node" parent="."]
process_mode = 1
editor_description = "Since control node cannot detect input when 'visible = false', this node helps pause menu to get input.

This node is pausable, which means it will not detect input when paused."
script = ExtResource("2_ypp6t")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BG" type="ColorRect" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.784314, 1, 1)

[node name="Main" type="Control" parent="UI"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0
theme = ExtResource("1_rqgyv")

[node name="Options" type="TextureButton" parent="UI/Main"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -224.0
offset_top = 36.0
offset_right = 224.0
offset_bottom = 164.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("4_fwwrc")
texture_hover = ExtResource("5_hmfyk")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="UI/Main/Options"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "OPTIONS"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="QuitGame" type="TextureButton" parent="UI/Main"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -224.0
offset_top = 212.0
offset_right = 224.0
offset_bottom = 340.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("4_fwwrc")
texture_hover = ExtResource("5_hmfyk")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="UI/Main/QuitGame"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Save and Quit"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="Options" type="Control" parent="UI"]
unique_name_in_owner = true
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0
theme = ExtResource("1_rqgyv")
script = ExtResource("6_q57an")
metadata/_edit_lock_ = true

[node name="SubOptions" type="Control" parent="UI/Options"]
layout_mode = 1
anchor_right = 0.2
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="Video" type="TextureButton" parent="UI/Options/SubOptions"]
texture_filter = 1
layout_mode = 1
offset_left = 40.0
offset_top = 64.0
offset_right = 344.0
offset_bottom = 192.0
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("5_gkrn5")
texture_pressed = ExtResource("6_0xe54")
texture_hover = ExtResource("7_pj630")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="UI/Options/SubOptions/Video"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "VIDEO"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="Music" type="TextureButton" parent="UI/Options/SubOptions"]
texture_filter = 1
layout_mode = 0
offset_left = 40.0
offset_top = 256.0
offset_right = 344.0
offset_bottom = 384.0
toggle_mode = true
texture_normal = ExtResource("5_gkrn5")
texture_pressed = ExtResource("6_0xe54")
texture_hover = ExtResource("7_pj630")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="UI/Options/SubOptions/Music"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "MUSIC"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="Apply" type="TextureButton" parent="UI/Options/SubOptions"]
texture_filter = 1
layout_mode = 0
offset_left = 40.0
offset_top = 704.0
offset_right = 344.0
offset_bottom = 832.0
texture_normal = ExtResource("5_gkrn5")
texture_pressed = ExtResource("6_0xe54")
texture_hover = ExtResource("7_pj630")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="UI/Options/SubOptions/Apply"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "APPLY"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="EXIT" type="TextureButton" parent="UI/Options/SubOptions"]
texture_filter = 1
layout_mode = 0
offset_left = 40.0
offset_top = 888.0
offset_right = 344.0
offset_bottom = 1016.0
texture_normal = ExtResource("5_gkrn5")
texture_pressed = ExtResource("6_0xe54")
texture_hover = ExtResource("7_pj630")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="UI/Options/SubOptions/EXIT"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "EXIT"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="Line2D" type="Line2D" parent="UI/Options"]
points = PackedVector2Array(384, 64, 384, 1024)
width = 8.0
default_color = Color(0, 1, 1, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="Video" type="Control" parent="UI/Options"]
layout_mode = 1
anchor_left = 0.2
anchor_right = 1.0
anchor_bottom = 0.83
offset_bottom = -0.400024
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="Label_Resolution" type="Label" parent="UI/Options/Video"]
layout_mode = 0
offset_left = 192.0
offset_top = 128.0
offset_right = 576.0
offset_bottom = 256.0
text = "RESOLUTION"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label_ScreenMode" type="Label" parent="UI/Options/Video"]
layout_mode = 0
offset_left = 192.0
offset_top = 320.0
offset_right = 576.0
offset_bottom = 448.0
text = "SCREEN MODE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label_VSync" type="Label" parent="UI/Options/Video"]
layout_mode = 0
offset_left = 192.0
offset_top = 512.0
offset_right = 576.0
offset_bottom = 640.0
text = "VSYNC"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Resolution_Dropdown" type="OptionButton" parent="UI/Options/Video"]
layout_mode = 0
offset_left = 768.0
offset_top = 128.0
offset_right = 1280.0
offset_bottom = 256.0
alignment = 1
item_count = 3
selected = 0
popup/item_0/text = "1920x1080"
popup/item_0/id = 0
popup/item_1/text = "1600x900"
popup/item_1/id = 1
popup/item_2/text = "1280x720"
popup/item_2/id = 2

[node name="ScreenMode_Dropdown" type="OptionButton" parent="UI/Options/Video"]
layout_mode = 0
offset_left = 768.0
offset_top = 320.0
offset_right = 1280.0
offset_bottom = 448.0
alignment = 1
item_count = 2
selected = 0
popup/item_0/text = "FULLSCREEN"
popup/item_0/id = 3
popup/item_1/text = "WINDOWED"
popup/item_1/id = 0

[node name="VSync_Button" type="TextureButton" parent="UI/Options/Video"]
texture_filter = 1
layout_mode = 0
offset_left = 872.0
offset_top = 512.0
offset_right = 1176.0
offset_bottom = 640.0
toggle_mode = true
texture_normal = ExtResource("5_gkrn5")
texture_pressed = ExtResource("6_0xe54")
texture_hover = ExtResource("7_pj630")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="UI/Options/Video/VSync_Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "OFF"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="Music" type="Control" parent="UI/Options"]
visible = false
layout_mode = 1
anchor_left = 0.2
anchor_right = 1.0
anchor_bottom = 0.83
offset_bottom = -0.400024
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="Label_BGM" type="Label" parent="UI/Options/Music"]
layout_mode = 0
offset_left = 192.0
offset_top = 128.0
offset_right = 576.0
offset_bottom = 256.0
text = "BGM VOLUME"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label_SFX" type="Label" parent="UI/Options/Music"]
layout_mode = 0
offset_left = 192.0
offset_top = 320.0
offset_right = 576.0
offset_bottom = 448.0
text = "SFX VOLUME"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSlider_BGM" type="HSlider" parent="UI/Options/Music"]
layout_mode = 0
offset_left = 640.0
offset_top = 176.0
offset_right = 1472.0
offset_bottom = 208.0
min_value = -40.0
max_value = 40.0
step = 5.0

[node name="HSlider_SFX" type="HSlider" parent="UI/Options/Music"]
layout_mode = 0
offset_left = 640.0
offset_top = 368.0
offset_right = 1472.0
offset_bottom = 400.0
min_value = -40.0
max_value = 40.0
step = 5.0

[connection signal="pressed" from="UI/Main/Options" to="UI/Options" method="_on_any_button_pressed"]
[connection signal="pressed" from="UI/Main/Options" to="UI/Options" method="_change_option_visibility" binds= [true]]
[connection signal="pressed" from="UI/Main/QuitGame" to="." method="back_to_main"]
[connection signal="pressed" from="UI/Main/QuitGame" to="UI/Options" method="_on_any_button_pressed"]
[connection signal="pressed" from="UI/Options/SubOptions/Video" to="UI/Options" method="_on_any_button_pressed"]
[connection signal="toggled" from="UI/Options/SubOptions/Video" to="UI/Options" method="_on_video_toggled"]
[connection signal="pressed" from="UI/Options/SubOptions/Music" to="UI/Options" method="_on_any_button_pressed"]
[connection signal="toggled" from="UI/Options/SubOptions/Music" to="UI/Options" method="_on_music_toggled"]
[connection signal="pressed" from="UI/Options/SubOptions/Apply" to="UI/Options" method="_on_any_button_pressed"]
[connection signal="pressed" from="UI/Options/SubOptions/Apply" to="UI/Options" method="_on_apply_pressed"]
[connection signal="pressed" from="UI/Options/SubOptions/EXIT" to="UI/Options" method="_on_any_button_pressed"]
[connection signal="pressed" from="UI/Options/SubOptions/EXIT" to="UI/Options" method="_change_option_visibility" binds= [false]]
[connection signal="pressed" from="UI/Options/Video/VSync_Button" to="UI/Options" method="_on_any_button_pressed"]
[connection signal="toggled" from="UI/Options/Video/VSync_Button" to="UI/Options" method="_on_v_sync_button_toggled"]
